<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
            android:id="@+id/action_filter"
            android:title="@string/filter"
            android:icon="@drawable/ic_filter_list_black_24dp"
            app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/one_month" android:title="@string/one_month"/>
            <item android:id="@+id/two_months" android:title="@string/two_months"/>
            <item android:id="@+id/six_months" android:title="@string/six_months"/>
            <item android:id="@+id/one_year" android:title="@string/one_year"/>
            <item android:id="@+id/two_years" android:title="@string/two_years"/>
        </menu>


    </item>

</menu>
